Updating files yo

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>6765</title>
+  <title>75025</title>
 
   <link href="style/main.css" rel="stylesheet" type="text/css">
   <link rel="shortcut icon" href="favicon.ico">
@@ -16,13 +16,13 @@
 <body>
   <div class="container">
     <div class="heading">
-      <h1 class="title">6765</h1>
+      <h1 class="title">75025</h1>
       <div class="scores-container">
         <div class="score-container">0</div>
         <div class="best-container">0</div>
       </div>
     </div>
-    <p class="game-intro">Join the numbers and get to the <strong>6765 tile!</strong></p>
+    <p class="game-intro">Join the numbers and get to the <strong>75025 tile!</strong></p>
 
     <div class="game-container">
       <div class="game-message">
@@ -38,25 +38,36 @@
           <div class="grid-cell"></div>
           <div class="grid-cell"></div>
           <div class="grid-cell"></div>
-		 <div class="grid-cell"></div>
+          <div class="grid-cell"></div>
+	  <div class="grid-cell"></div>	
         </div>
         <div class="grid-row">
           <div class="grid-cell"></div>
           <div class="grid-cell"></div>
           <div class="grid-cell"></div>
           <div class="grid-cell"></div>
+	  <div class="grid-cell"></div>
         </div>
         <div class="grid-row">
           <div class="grid-cell"></div>
           <div class="grid-cell"></div>
           <div class="grid-cell"></div>
           <div class="grid-cell"></div>
+	  <div class="grid-cell"></div>
         </div>
         <div class="grid-row">
           <div class="grid-cell"></div>
           <div class="grid-cell"></div>
           <div class="grid-cell"></div>
           <div class="grid-cell"></div>
+	  <div class="grid-cell"></div>
+        </div>
+	<div class="grid-row">
+          <div class="grid-cell"></div>
+          <div class="grid-cell"></div>
+          <div class="grid-cell"></div>
+          <div class="grid-cell"></div>
+	  <div class="grid-cell"></div>
         </div>
       </div>
 
@@ -72,7 +83,7 @@
 	<strong class="important">Rules:</strong> To merge two tiles, their sum must be a number of the Fibonacci Sequence.</p>
     <hr>
     <p>
-    <strong class="important">Note:</strong> This game is a clone of 2048, created by <a href="http://gabrielecirulli.com" target="_blank">Gabriele Cirulli</a>, and you can play it <a href="http://gabrielecirulli.github.io/2048/">here.</a> His game is based on <a href="https://itunes.apple.com/us/app/1024!/id823499224" target="_blank">1024 by Veewo Studio</a> and conceptually similar to <a href="http://asherv.com/threes/" target="_blank">Threes by Asher Vollmer.</a>
+    <strong class="important">Note:</strong> This game is a 5 x 5 fast-paced clone of 2048, created by <a href="http://gabrielecirulli.com" target="_blank">Gabriele Cirulli</a>, and you can play it <a href="http://gabrielecirulli.github.io/2048/">here.</a> His game is based on <a href="https://itunes.apple.com/us/app/1024!/id823499224" target="_blank">1024 by Veewo Studio</a> and conceptually similar to <a href="http://asherv.com/threes/" target="_blank">Threes by Asher Vollmer.</a>
     </p>
   </div>
 
